# vpv_ai

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  init-v3-project.sh  restart-dev.sh  start-dev.sh
.engram/: manifest.json
backend/: .env.example  .env.test  Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 501c85808658_add_stats_crc_to_matches.py  73fd1b04133b_baseline_stamp.py  b4526c391b2d_add_invites_table.py  c8a1f3e72d91_add_player_ownership_log.py
backend/scripts/: backfill_weekly_payments.py  fix_winter_draft_drops.py  populate_ownership_log.py
backend/src/: app.py
backend/src/core/: config.py  database.py  exceptions.py  logging.py  rate_limit.py
backend/src/features/auth/: repository.py  router.py  schemas.py  service.py
backend/src/features/copa/: repository.py  router.py  schemas.py  service.py
backend/src/features/dashboard/: router.py  schemas.py
backend/src/features/drafts/: repository.py  router.py  schemas.py  service.py
backend/src/features/economy/: repository.py  router.py  schemas.py  service.py
backend/src/features/health/: router.py
backend/src/features/lineups/: repository.py  router.py  schemas.py  service.py
backend/src/features/matchdays/: repository.py  router.py  schemas.py  service.py
backend/src/features/players/: repository.py  router.py  schemas.py  service.py
backend/src/features/scraping/: aggregation.py  cli.py  client.py  config.py  parsers.py  photos.py  repository.py  router.py  scheduler.py  scoring.py  service.py
backend/src/features/seasons/: repository.py  router.py  schemas.py  service.py
backend/src/features/squads/: repository.py  router.py  schemas.py  service.py
backend/src/shared/: dependencies.py
backend/tests/: conftest.py
(+164 files in other folders)
